--- a/app/templates/header.html
+++ b/app/templates/header.html
@@ -18,6 +18,11 @@
         <li class="nav-item">
           <a class="nav-link" href="{{ url_for('files') }}">View Images</a>
       </li>
+      {% if current_user.is_authenticated %}
+            <li><a href="{{ url_for('logout') }}">Logout</a></li>
+        {% else %}
+            <li><a href="{{ url_for('login') }}">Login</a></li>
+        {% endif %}
       </ul>
       <ul class="navbar-nav">
         <li class="nav-item">
